<resources>
    <string name="app_name">Ca$hAdmin</string>
    <string name="action_settings">Gérer les catégories</string>

    <string name="title_activity_new_expense">Nouvelle dépense</string>
    <string name="emptyAmount">Il faut remplir d\'un montant !</string>

    <string name="title_activity_main">Ca$hAdmin</string>

    <string name="expense">Dépense</string>
    <string name="income">Revenu</string>
    <string name="noExpense">Pas de dépense</string>
    <string name="noIncome">Pas de revenu</string>
    <string name="lastExpenseLabel">Dernière dépense :</string>
    <string name="totalExpenseLabel">Total des dépenses :</string>
    <string name="historyLabel">Historique</string>
    <string name="change_cat">Gérer les catégories</string>
    <string name="settings">Paramètres</string>

    <string name="title_activity_account_connexion">Ca$hAdmin</string>

    <string name="connexion">Connexion</string>
    <string name="login">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="forgetPassword">Mot de passe oublié ?</string>
    <string name="rememberMe">Se souvenir de moi</string>
    <string name="emptyField">Il faut remplir tous les champs !</string>

    <string name="title_activity_forget_password">Mot de passe oublié</string>

    <string name="enterMail">Adresse e-mail</string>
    <string name="send">Envoyer</string>
    <string name="passwordExplanation">Un mail va vous être envoyé. Veuillez suivre les instructions contenues dans ce mail pour changer votre mot de passe.</string>
    <string name="emptyMail">Il faut entrer une adresse mail</string>
    <string name="validationMail">Mail envoyé !</string>

    <string name="title_activity_select_category">Catégories</string>

    <string name="CategoryName">Nom de la catégorie :</string>
    <string name="Name">Nom</string>
    <string name="others">Autres</string>
    <string name="CategoryColor">Couleur choisie :</string>
    <string name="ChooseColor">Choisissez une couleur</string>
    <string name="lastIncomeLabel">Dernier revenu :</string>
    <string name="totalIncomeLabel">Total des revenus :</string>
    <string name="cancel">Annuler</string>
    <string name="amount">Montant :</string>
    <string name="addExpense">Ajouter une dépense</string>
    <string name="label">Libellé :</string>
    <string name="recurrence">Récurrence :</string>
    <string name="each">Tous les :</string>
    <string name="labelCategory">Catégories :</string>
    <string name="saveChanges">Enregistrer</string>

    <string name="title_activity_new_income">Nouveau revenu</string>

    <string name="addIncome">Ajouter un revenu</string>
    <string name="transactionLabel">Transactions</string>
    <string name="fieldEmpty">Il faut remplir tous les champs !</string>

    <string name="title_activity_history">Historique</string>

    <string name="validAmount">Le montant doit être valide !</string>
    <string name="from">A partir de :</string>
    <string name="emptyName">Vous devez entrer un nom !</string>
    <string name="newTransaction">Nouvelle transaction !</string>
    <string name="addWallet">€ ont été ajoutés à votre portefeuille (</string>
    <string name="removeWallet">€ ont été retirés de votre portefeuille (</string>
    <string name="Never">Jamais</string>
    <string name="Days">Jours</string>
    <string name="Weeks">Semaines</string>
    <string name="Months">Mois</string>
    <string name="Years">Années</string>


    <string name="title_activity_edit_category">Catégories</string>

    <string name="deleteCategory">Supprimer</string>
    <string name="HandleCategories">Gérer les catégories</string>
    <string name="validate">Valider</string>
    <string name="cantDeleteCat">Vous ne pouvez pas supprimer cette catégorie !</string>
    <string name="endDate">Date de fin :</string>
    <string name="until">Jusque :</string>
    <string name="failDate">Dates incorrectes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cycles">Cycles</string>
    <string name="whichDay">Quel jour ?</string>
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saterday">Samedi</string>
    <string name="sunday">Dimanche</string>
    <string name="chooseDay">Choisir le jour</string>
    <string name="january">janvier</string>
    <string name="february">février</string>
    <string name="march">mars</string>
    <string name="april">avril</string>
    <string name="may">mai</string>
    <string name="june">juin</string>
    <string name="july">juillet</string>
    <string name="august">août</string>
    <string name="september">septembre</string>
    <string name="october">octobre</string>
    <string name="november">novembre</string>
    <string name="december">décembre</string>
    <string name="availableDate">Sélectionnez une date valide</string>
    <string name="ok">Ok</string>
    <string name="permanentOrders">Ordres permanents</string>
</resources>
