<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="24dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CategoryName"
        android:textColor="@color/Black"
        android:textSize="14dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/nameCat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:textSize="14dp"
        android:layout_marginBottom="12dp"
        android:singleLine="true"
        android:lines="1"
        android:maxLines="1"
        android:scrollHorizontally="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CategoryColor"
        android:textColor="@color/Black"
        android:textSize="14dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/colorChoice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:padding="4dp"
        android:clickable="true"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/addFinalCategoryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Ok"/>


</LinearLayout>