<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="net.cashadmin.cashadmin.Activities.Activities.ForgetPasswordActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/linearborder"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterMail"
            android:textColor="@color/secondary"
            android:textSize="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/mail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterMail"
            android:textSize="22dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/BaseButton"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:padding="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordExplanation"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/layout"
        android:layout_margin="36dp"/>

</RelativeLayout>
