<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/greyBackground"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="net.cashadmin.cashadmin.Activities.Activities.NewIncomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/amountLayout"
                android:layout_width="fill_parent"
                android:layout_height="54dp"
                android:layout_below="@id/subtitle"
                android:layout_margin="8dp"
                android:background="@color/White"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/amount"
                    android:textColor="@color/Black"
                    android:textSize="14dp"
                    />

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.3"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLines="1"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:textSize="14dp"/>

                <requestFocus/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="€"
                    android:textColor="@color/Black"
                    android:textSize="14dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/labelLayout"
                android:layout_width="fill_parent"
                android:layout_height="54dp"
                android:layout_below="@id/amountLayout"
                android:layout_margin="8dp"
                android:background="@color/White"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:text="@string/label"
                    android:textColor="@color/Black"
                    android:textSize="14dp"
                    />

                <EditText
                    android:id="@+id/label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:lines="1"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="14dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/recurrenceLayout"
                android:layout_width="fill_parent"
                android:layout_height="54dp"
                android:layout_below="@id/labelLayout"
                android:layout_margin="8dp"
                android:background="@color/White"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:text="@string/recurrence"
                    android:textColor="@color/Black"
                    android:textSize="14dp"
                    />

                <Switch
                    android:id="@+id/mySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:checked="false"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="fill_parent"
                android:layout_height="54dp"
                android:layout_below="@id/recurrenceLayout"
                android:layout_margin="8dp"
                android:background="@color/White"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:text="@string/from"
                    android:textColor="@color/Black"
                    android:textSize="14dp"
                    />

                <TextView
                    android:id="@+id/dateChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/White"
                    android:clickable="true"
                    android:padding="8dp"
                    android:textColor="@color/Black"
                    android:textSize="14dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/whicheRecurrenceLayout"
                android:layout_width="fill_parent"
                android:layout_height="54dp"
                android:layout_below="@id/dateLayout"
                android:layout_margin="8dp"
                android:background="@color/White"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:text="@string/each"
                    android:textColor="@color/Black"
                    android:textSize="14dp"
                    />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:spinnerMode="dropdown">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/endDateSwitchLayout"
                android:layout_width="fill_parent"
                android:layout_height="54dp"
                android:layout_below="@id/whicheRecurrenceLayout"
                android:layout_margin="8dp"
                android:background="@color/White"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:text="@string/endDate"
                    android:textColor="@color/Black"
                    android:textSize="14dp"
                    />

                <Switch
                    android:id="@+id/endDateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:checked="false"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/endDateLayout"
                android:layout_width="fill_parent"
                android:layout_height="54dp"
                android:layout_below="@id/endDateSwitchLayout"
                android:layout_margin="8dp"
                android:background="@color/White"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:text="@string/until"
                    android:textColor="@color/Black"
                    android:textSize="14dp"
                    />

                <TextView
                    android:id="@+id/endDateChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/White"
                    android:clickable="true"
                    android:padding="8dp"
                    android:textColor="@color/Black"
                    android:textSize="14dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/addIncomeButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/endDateLayout"
                android:layout_centerHorizontal="true"
                android:text="@string/addIncome"
                android:textSize="16dp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
