<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="net.cashadmin.cashadmin.Activities.Activities.NewExpenseActivity">

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="14dp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:padding="6dp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/amountLayout"
        android:layout_below="@id/subtitle"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@color/greyBackground"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="14dp"
            android:textColor="@color/Black"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            />

        <EditText
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_weight="0.3"
            android:numeric="decimal"
            android:inputType="numberDecimal"
            android:layout_gravity="center_vertical"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="€"
            android:textSize="14dp"
            android:textColor="@color/Black"/>

    </LinearLayout>

    <Button
        android:layout_below="@id/amountLayout"
        android:id="@+id/addExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addExpense"
        android:textColor="@color/White"
        android:textSize="16dp"
        style="@style/RedButton"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/labelLayout"
        android:layout_below="@id/addExpenseButton"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@color/greyBackground"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label"
            android:textSize="14dp"
            android:textColor="@color/Black"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            />

        <EditText
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="14dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            android:scrollHorizontally="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recurrenceLayout"
        android:layout_below="@id/labelLayout"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@color/greyBackground"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recurrence"
            android:textSize="14dp"
            android:textColor="@color/Black"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            />

        <Switch
            android:id="@+id/mySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:checked="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/whicheRecurrenceLayout"
        android:layout_below="@id/recurrenceLayout"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@color/greyBackground"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recurrence"
            android:textSize="14dp"
            android:textColor="@color/Black"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

</RelativeLayout>
